--- a/README.org
+++ b/README.org
@@ -81,6 +81,12 @@ curlRun https://raw.githubusercontent.com/<<username>>/ylv/master/ylv $ylv clone
 chRun ~/.config/yadm/bootstrap
 #+end_src
 
+[[https://github.com/shadowrylander/shadowrylander/blob/main/oreo.aiern.org#functions][Source these functions:]]
+
+#+begin_src zsh
+source $root/resources/functions
+#+end_src
+
 #+begin_src zsh
 $ylv se clone --no-bootstrap <<username>>@bastiodon:<<yadm-dir>>-sec/repo.git
 chRun ~/.config/yadm-sec/bootstrap
