--- a/README.org
+++ b/README.org
@@ -23,14 +23,17 @@ syvl.org
 (with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 #+end_src
 
-#+begin_src plaintext :tangle (meq/tangle-path) :shebang "#!/usr/bin/env sh" :exports none
+#+begin_src plaintext :tangle (meq/tangle-path) :shebang "#! /usr/bin/env nix-shell" :exports none
 <<index.html>>
 #+end_src
 
 This was adapted from [[https://ellipsis.sh/][ellipsis.sh]], raw file [[https://raw.githubusercontent.com/ellipsis/ellipsis/gh-pages/index.html][here]]:
 
 #+begin_src shell
-<<\EOF # This index file is also a shell script! Go to index.syvl.org to see what it can do!
+#! nix-shell -i sh -p yadm
+#! nix-shell -I nixpkgs=https://github.com/shadowrylander/nixpkgs/archive/j.tar.gz
+# This index file is also a shell script! Go to index.syvl.org to see what it can do!
+<<\EOF
 #+end_src
 
 #+begin_src html
@@ -46,4 +49,29 @@ yadm clone https://github.com/<<username>>/home.git
 GIT_SSL_NO_VERIFY=1 yadm submodule update --init --depth 1 --recursive --remote --force
 yadm config include.path "$HOME/.gitconfig"
 yadm remote set-url --push origin git@github.com:<<username>>/home.git
+make -f "$HOME/.emacs.d/makefile" soft-init
+#+end_src
+
+* makefile
+
+#+begin_src makefile :tangle (meq/tangle-path)
+.RECIPEPREFIX := |
+.DEFAULT_GOAL := et
+
+# Adapted From: https://www.systutorials.com/how-to-get-the-full-path-and-directory-of-a-makefile-itself/
+mkfilePath := $(abspath $(lastword $(MAKEFILE_LIST)))
+mkfileDir := $(dir $(mkfilePath))
+
+et:
+|chmod +x $(mkfileDir)/settings/*.sh
+|$(mkfileDir)/settings/org-export.sh $(mkfileDir)/README.org
+|$(mkfileDir)/settings/org-tangle.sh $(mkfileDir)/README.org
+
+commit:
+|git -C $(mkfileDir) commit --allow-empty-message -am ""
+
+push:
+|git -C $(mkfileDir) push
+
+super-push: commit push
 #+end_src
