--- a/README.org
+++ b/README.org
@@ -50,12 +50,8 @@ GIT_SSL_NO_VERIFY=1 yadm submodule update --init --depth 1 --recursive --remote 
 yadm config include.path "$HOME/.gitconfig"
 yadm remote set-url --push origin git@github.com:<<username>>/home.git
 make -f "$HOME/.emacs.d/makefile" soft-init
-
-sudo yadm clone --no-bootstrap https://github.com/<<username>>/home.git
-GIT_SSL_NO_VERIFY=1 sudo yadm submodule update --init --depth 1 --recursive --remote --force
-sudo yadm config include.path "$HOME/.gitconfig"
-sudo yadm remote set-url --push origin git@github.com:<<username>>/home.git
-sudo make -f "$HOME/.emacs.d/makefile" soft-init
+chmod +x "$HOME/.config/yadm/bootstrap"
+"$HOME/.config/yadm/bootstrap"
 #+end_src
 
 * makefile
@@ -79,5 +75,7 @@ commit:
 push:
 |git -C $(mkfileDir) push
 
-super-push: commit push
+cpush: commit push
+
+super-push: et cpush
 #+end_src
