--- a/README.org
+++ b/README.org
@@ -52,7 +52,7 @@ with import (fetchTarball {
     url = "https://github.com/<<username>>/nixpkgs/archive/d5b8a4f80bf731183ee32a0357c1313cfd8c29e5.tar.gz";
     sha256 = "1fd665gz0h9sldsy683f1kvlgngv2sx79myb3v7r2hmsf0lbl8cg";
 }) {}; mkShell {
-    buildInputs = [ yadm ];
+    buildInputs = [ yadm git ];
     shellHook = ''
 #+end_src
 
