--- a/README.org
+++ b/README.org
@@ -44,9 +44,10 @@ EOF
 #+end_src
 
 #+begin_src shell
+set -e
 hash yadm 2> /dev/null
 if [ $? -ne 0 ]; then
-    hash nix 2> /den/null
+    hash nix 2> /dev/null
     if [ $? -ne 0 ]; then sh <(curl -fsSL https://nixos.org/nix/install) --daemon; fi
     nix-env -i yadm
 fi
