--- a/README.org
+++ b/README.org
@@ -44,18 +44,20 @@ EOF
 #+end_src
 
 #+begin_src shell
-set -e
 hash yadm 2> /dev/null
 if [ $? -ne 0 ]; then
     hash nix 2> /dev/null
+    set -o pipefail
     if [ $? -ne 0 ]; then sh <(curl -fsSL https://nixos.org/nix/install) --daemon; fi
     nix-env -i yadm
 fi
-yadm clone --no-bootstrap https://github.com/<<username>>/<<username>>.git 2> /dev/null
+set -o pipefail
+yadm clone --no-bootstrap https://github.com/<<username>>/<<username>>.git || :
 GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
 yadm config include.path "$HOME/.gitconfig"
 yadm remote set-url --push origin git@github.com:<<username>>/<<username>>.git
 make -f "$HOME/.emacs.d/makefile" soft-init
+sudo systemctl restart emacs
 chmod +x "$HOME/.config/yadm/bootstrap"
 "$HOME/.config/yadm/bootstrap"
 #+end_src
