--- a/README.org
+++ b/README.org
@@ -44,14 +44,16 @@ EOF
 #+end_src
 
 #+begin_src shell
+fail () { set -eo pipefail; }
+
 hash yadm 2> /dev/null
 if [ $? -ne 0 ]; then
     hash nix 2> /dev/null
-    set -o pipefail
+    fail
     if [ $? -ne 0 ]; then sh <(curl -fsSL https://nixos.org/nix/install) --daemon; fi
     nix-env -i yadm
 fi
-set -o pipefail
+fail
 yadm clone --no-bootstrap https://github.com/<<username>>/<<username>>.git || :
 GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
 yadm config include.path "$HOME/.gitconfig"
