--- a/README.org
+++ b/README.org
@@ -19,7 +19,12 @@ syvl.org
 :CUSTOM_ID:       f3e32608-7200-4808-9d42-59112f32d395
 :END:
 
-#+name: 20220211011451344976852
+#+name: 58b62ef7-d880-4cc4-9d4d-9d0e76983d2f
+#+begin_src text
+yadm git gnumake
+#+end_src
+
+#+name: 4751ce0e-6018-4f00-8c6d-89f43c3fb792
 #+begin_src emacs-lisp :eval never-export
 (with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 #+end_src
@@ -36,7 +41,7 @@ This was adapted from [[https://ellipsis.sh/][ellipsis.sh]], raw file [[https://
 #+end_src
 
 #+begin_src html
-<<20220211011451344976852()>><!--
+<<4751ce0e-6018-4f00-8c6d-89f43c3fb792()>><!--
 #+end_src
 
 #+begin_src shell
@@ -49,12 +54,12 @@ ensure () {
     hash "$1" 2> /dev/null
     if [ $? -ne 0 ]; then
         hash nix 2> /dev/null
-        [ $? -ne 0 ] && sh <(curl -fsSL https://nixos.org/nix/install) --daemon || :
+        [ $? -ne 0 ] && sh <(curl -fsSL https://nixos.org/nix/install) --daemon
         [ -z "$2" ] && nix-env -i "$2" || nix-env -i "$1"
     fi
 }
 
-for p in yadm git; do ensure $p; done
+for p in <<58b62ef7-d880-4cc4-9d4d-9d0e76983d2f>>; do ensure $p; done
 
 setFail
 
@@ -65,6 +70,8 @@ yadm remote set-url --push origin git@github.com:<<username>>/<<username>>.git
 make -f "$HOME/.emacs.d/makefile" soft-init
 chmod +x "$HOME/.config/yadm/bootstrap"
 "$HOME/.config/yadm/bootstrap"
+
+for p in <<58b62ef7-d880-4cc4-9d4d-9d0e76983d2f>>; do nix-env -e $p; done
 #+end_src
 
 * makefile
