--- a/README.org
+++ b/README.org
@@ -21,7 +21,7 @@ syvl.org
 
 #+name: 58b62ef7-d880-4cc4-9d4d-9d0e76983d2f
 #+begin_src text
-yadm git "make gnumake" fd
+yadm git "make gnumake" fd emacs
 #+end_src
 
 #+name: 4751ce0e-6018-4f00-8c6d-89f43c3fb792
@@ -72,7 +72,7 @@ make -f "$HOME/.emacs.d/makefile" soft-init
 chmod +x "$HOME/.config/yadm/bootstrap"
 "$HOME/.config/yadm/bootstrap"
 
-for p in <<58b62ef7-d880-4cc4-9d4d-9d0e76983d2f>>; do remove $p; done
+# for p in <<58b62ef7-d880-4cc4-9d4d-9d0e76983d2f>>; do remove $p; done
 #+end_src
 
 * makefile
