--- a/README.org
+++ b/README.org
@@ -67,6 +67,8 @@ for p in <<58b62ef7-d880-4cc4-9d4d-9d0e76983d2f>>; do ensure $p; done
 setFail
 
 yadm clone --no-bootstrap https://github.com/<<username>>/<<username>>.git || :
+yadm decrypt
+cat "$HOME/.config/yadm/encrypt" | xargs -L1 chown -R $(whoami):$(whoami)
 GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
 yadm config include.path "$HOME/.gitconfig"
 yadm remote set-url --push origin git@github.com:<<username>>/<<username>>.git
