--- a/README.org
+++ b/README.org
@@ -68,9 +68,11 @@ setFail
 
 yadm clone --no-bootstrap https://github.com/<<username>>/<<username>>.git || :
 yadm remote set-url --push origin git@github.com:<<username>>/<<username>>.git
-nixos-generate-config || :
 
-subinit="submodule update --init --depth 1 --recursive --remote --force"
+# TODO: May need `yadm stash' here
+# yadm stash
+
+nixos-generate-config || :
 #+end_src
 
 Adapted from [[https://unix.stackexchange.com/users/48083/graeme][Graeme's]] answer [[https://unix.stackexchange.com/a/121255/270053][here]],
@@ -83,12 +85,15 @@ read -p $'Tell me your secrets!\n' secrets < /dev/tty
 #+begin_src shell
 if [ "$secrets" != "n" ] || [ "$secrets" != "no" ]; then
     yadm sec clone --no-bootstrap $secrets || :
-    GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm sec $subinit
+
+    # TODO: May need `yadm stash' here
+    # yadm stash
+
     chmod +x "$HOME/.config/yadm-sec/bootstrap"
     "$HOME/.config/yadm-sec/bootstrap"
 fi
 
-GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm $subinit
+GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
 make -f "$HOME/.emacs.d/makefile" soft-init
 chmod +x "$HOME/.config/yadm/bootstrap"
 "$HOME/.config/yadm/bootstrap"
